[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Telegram SMS Service Bot - Multi-provider SMS number management system with balance tracking, reservation system, and multi-language support"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]
